# ole

./: .env  Cargo.toml  Containerfile  Dockerfile  LICENSE.md  README.md  cert.pem  compose.yaml  docker-compose.yml  index.html  key.pem  run-podman.sh  run.bat  run.sh  style.css  wrapper.sh
backend/: .env  Cargo.toml  README.md  compose.yaml
backend/migrations/2023-02-09-082347_accounts/: up.sql
backend/migrations/2023-06-04-025904_courses/: up.sql
backend/migrations/2023-06-23-030059_lessons/: down.sql  up.sql
backend/src/: database.rs  lib.rs  models.rs  routes.rs  schema.rs  server.rs
backend/src/handlers/: accounts.rs  auth.rs  courses.rs  lessons.rs  login.rs  mod.rs
backend/static/: index.html  style.css
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Dioxus.toml  index.html  style.scss
frontend/assets/: style.css
frontend/src/: course.rs  home.rs  lesson.rs  lib.rs  login.rs  logout.rs  main.rs
frontend/src/assets/: style.css
migrations/2023-02-08-051638_accounts/: up.sql
src/: database.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs
src/handlers/: accounts.rs  auth.rs  mod.rs
static/: index.html  style.css
static/assets/dioxus/: dioxus.js
static/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
