[package]
name = "ole"
version = "0.1.0"
authors = ["Brynley Llewellyn-Roux"]
edition = "2021"
description = "A fast, scalable online learning platform."
repository = "https://github.com/brynblack/ole"
license = "MIT"
keywords = ["education"]

[dependencies]
actix-web = "4.3.0"
argon2 = "0.4.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
