[package]
name = "ole"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "4.3.0", features = ["openssl"] }
argon2 = "0.4.1"
chrono = "0.4.26"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
log = "0.4.17"
openssl = "0.10.45"
serde = { version = "1.0.152", features = ["derive"] }
